<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellowLight"
    tools:context="com.example.mayankchauhan.inote.notes.activity.NoteActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            layout="@layout/notes_toolbar">
        </include>
    </android.support.design.widget.AppBarLayout>
    <EditText
        android:id="@+id/title_editText"
        android:hint="@string/title"
        android:layout_marginTop="@dimen/fifty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">
    </EditText>

    <EditText
        android:id="@+id/note_editText"
        android:hint="@string/note"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">
    </EditText>

    <Button
        android:id="@+id/setReminder_button"
        android:text="@string/setReminder"
        android:layout_marginTop="@dimen/fifty"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@color/yellowLight"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/five"
        android:weightSum="2">

        <Button
            android:id="@+id/addImage_button"
            android:text="@string/addImage"
            android:background="@color/yellowLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/saveNote_button"
            android:text="@string/saveNote"
            android:background="@color/yellowLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
